# coros-mcp

./: .gitignore  CLAUDE.md  README.md  cli.py  coros_api.py  models.py  pyproject.toml  server.py
.github/workflows/: ci.yml
auth/: encrypted_store.py  storage.py
cache/: __init__.py  store.py  sync.py  utils.py
coros_mcp/: cli.py  coros_api.py  models.py  server.py
coros_mcp/auth/: __init__.py  encrypted_store.py  keyring_store.py  storage.py
coros_mcp/cache/: store.py  sync.py  utils.py
docs/: mobile-token.md
tests/: test_cache_store.py  test_cache_sync.py  test_cache_sync_integration.py  test_cache_utils.py  test_compact_activity.py  test_post_release_review_fixes.py  test_today_review_fixes.py  test_workout_payloads.py
