[project]
name = "coros-mcp"
version = "0.1"
description = "MCP server for Coros sleep and HRV data"
requires-python = ">=3.11"
dependencies = [
    "cryptography",
    "pycryptodome>=3.0",
    "fastmcp>=0.9",
    "httpx>=0.27",
    "keyring",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
coros-mcp = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py", "auth/*.py", "cache/*.py"]

[tool.ruff]
target-version = "py311"
line-length = 90

[tool.ruff.lint]
# Start with pyflakes (F) rules that catch actual bugs.
# Additional rules (E, W, I) can be enabled incrementally.
select = ["F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
