[project]
name = "coros-mcp"
version = "0.2"
description = "MCP server for Coros sleep and HRV data"
requires-python = ">=3.11"
dependencies = [
    "cryptography",
    "pycryptodome>=3.0",
    "fastmcp>=0.9",
    "httpx>=0.27",
    "keyring",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
coros-mcp = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py", "auth/*.py", "cache/*.py"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]  # test method names may include camelCase identifiers

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disable_error_code = ["union-attr", "no-any-return", "arg-type", "no-untyped-call", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
